<resources>
    <string name="app_name">Widgets</string>
    <string name="click_me">Click Me</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="button_clicked">Button Clicked!</string>
    <string name="welcome_to_the_widgets_app">Welcome to the Widgets App!</string>
    <string name="image">Image</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="images">Images</string>
    <string name="toggle_image">Toggle Image</string>
</resources>